     * 'Hide and Seek' mostly rewritten and it now has a bigger map with
       randomly placed guards
   * The South Guard:
     * now the player has to kill the fake M'Brin in 'Choice in the Fog' instead
       of just attacking once
 * language and i18n:
   * updated translations: Chinese, Danish, Finnish, French, German, Italian,
     Lithuanian, Polish
   * updated DejaVuSans to 2.22
 * WML engine:
   * new event "last breath" will be triggered when a unit dies, but
     before the animation is played
   * allow ThemeWML to display the race.
   * new "random_gender=" key (boolean) to single units declarations in WML;
     the engine will generate a random gender for the spawned unit just like
     when it's recruited
   * updated {GENERIC_UNIT ...} macro to take advantage of random_gender
   * fixed [filter_radius] to support [and][or][not] and radius=
 * units:
   * all max-level units now have two AMLA options: +3 max HP (+25% max xp) and
     full heal (+25% max xp)
   * gave the Necrophage a feeding ability, giving it +1 max HP for every living
     enemy killed
 * sound:
   * new or improved sounds: ogre hit and die
 * User interface
   * display the race in the unit preview panel (with gender variation support).
   * allow to use team labels also for 1-player-teams (bug #9747)
   * changing the langugage now sets the version number in the title
     properly.
   * show 'back to round xxx' also in 800 x 600 resolution
 * miscellaneous and bug fixes:
   * various bug fixes and code cleanups
   * added gzip and gunzip command line parameters
   * replaced the 'Binary Saves' option with 'Compressed Saves' and now
     writes gzip files
   * added a "ping_timeout" preference to allow adjusting the default timeout
     value ('60') from the preferences file
   * rewrote the network code to also receive gzipped data:
     * The clients send gzipped data to the MP server. 
     * The MP server can send gzipped data depending on a hidden parameter 