@@ -10,6 +10,8 @@ Version 1.3.12+svn:
    * updated translations: Chinese, Danish, Finnish, French, German, Italian,
      Lithuanian, Polish
    * updated DejaVuSans to 2.22
+ * map editor:
+   * resize actions can be undone again (bug #10216)
  * WML engine:
    * new event "last breath" will be triggered when a unit dies, but
      before the animation is played
